Fixed #94, improving accuracy of design description.

--- a/pointing.html
+++ b/pointing.html
@@ -175,7 +175,7 @@
 			Some research has focused on overcoming this challenge.
 			For example, one approach reverse-engineered the widgets on a screen by analyzing the rendered pixels to identify targets, then applied targeted-aware pointing techniques like the bubble cursor (<a href="http://dx.doi.org/10.1145/2207676.2208734">Dixon et al. 2012</a>. 
 			Another technique used a data-driven technique, monitoring where in a window users typically point, and then assuming targets are there, applying target-aware pointing techniques (<a href="https://doi.org/10.1145/1294211.1294242">Hurst et al. 2007</a>).
-			Some have gone as far as using brain-sensing techniques to detect when a person is perceiving being near a target, and then having the system dynamically slow down pointer movement to increase the size of the target (<a href="https://doi.org/10.1145/2642918.2647414">Afergan et al. 2014</a>).
+			Some have gone as far as using brain-sensing techniques to detect when someone is in a period of difficult multitasking, then during that period, increasing the size of high priority targets, while decreasing the size of low priority targets (<a href="https://doi.org/10.1145/2642918.2647414">Afergan et al. 2014</a>).
 		</p>
 		
 		<p>
