--- a/translation.html
+++ b/translation.html
@@ -131,7 +131,7 @@
 
 		<p>
 			Some interface ideas successfully make it through these various technology transfer barriers.
-			For example, after decades of speech recognition and speech synthesis research, DAPRA, the U.S. Department of Defense's Advanced Research Projects Agency, decided to invest in applied research to explore a vision of personal digital assistants.
+			For example, after decades of speech recognition and speech synthesis research, DARPA, the U.S. Department of Defense's Advanced Research Projects Agency, decided to invest in applied research to explore a vision of personal digital assistants.
 			It funded one big five project called <a href="https://en.wikipedia.org/wiki/CALO">CALO</a> ("Cognitive Assistant that Learns and Organizes"), engaging researchers across universities and research labs in the United States in creating a range of digital assistants.
 			The project led to many spinoff companies, including one called Siri, Inc., which was founded by three researchers at SRI, International, a research lab in Silicon Valley that was charged with being the lead integrator of the CALO project.
 			The <a href="https://www.sri.com/work/timeline-innovation/timeline.php?timeline=computing-digital#!&innovation=siri">Siri company</a> took many of the ideas that the CALO project demonstrated as feasible (speech recognition, high quality speech synthesis, mapping speech to commands), and attempted to build a service out them.
