Fixed typo (wearning → wearing).

--- a/translation.html
+++ b/translation.html
@@ -108,8 +108,8 @@
 		</p>
 
 		<center>
-			<img src="images/google-glass.jpg" class="img-responsive" alt="A close up of a person wearning a Google Glass device." />
-			<small>A close up of a person wearning a Google Glass device.</small>
+			<img src="images/google-glass.jpg" class="img-responsive" alt="A close up of a person wearing a Google Glass device." />
+			<small>A close up of a person wearing a Google Glass device.</small>
 		</center>
 
 		<p>
