Fixed #105, addressing a few typos.

--- a/text-entry.html
+++ b/text-entry.html
@@ -93,7 +93,10 @@
 		</p>
 		
 		<p>
-			Two-dimensional keyboards like the familiar QWERTY layout are more common. And layout matters. The original QWERTY layout, for example, was designed to minimize mechanical failure, not speed or accuracy. The Dvorak layout was designed for speed and it, places the most common letters in the home row and maximizes alternation between hands (Dvorak and Dealey 1936):
+			Two-dimensional keyboards like the familiar QWERTY layout are more common. 
+			And layout matters. 
+			The original QWERTY layout, for example, was designed to minimize mechanical failure, not speed or accuracy. 
+			The Dvorak layout was designed for speed, placing the most common letters in the home row and maximizes alternation between hands (Dvorak and Dealey 1936):
 		</p>
 
 		<p>
@@ -166,7 +169,7 @@
 		</p>
 		
 		<p>
-			Continuous input is an alternative to discrete input, which involves providing a stream of data as input, which the computer than translates into characters or words.
+			Continuous input is an alternative to discrete input, which involves providing a stream of data as input, which the computer then translates into characters or words.
 			This helps avoid some of the limitations above, but often at the expense of speed or accuracy.
 			For example, popular in the late 1990's, the Palm Pilot used a unistroke gesture alphabet for text entry.
 			It did not require a physical keyboard, nor did it require space on screen for a virtual keyboard.
@@ -251,7 +254,7 @@
 		<ul>
 			<li>There are <em>many</em> ways to enter text into computers and they all have speed-accuracy tradeoffs.</li>
 			<li>The vast majority of techniques focus on speed and accuracy, and not on the other experiential factors in text entry, such as comfort or accessibility.</li>
-			<li>There are many text entry methods that are inefficient, and yet ubiquitious (e.g., QWERTY); adoption therefore isn't purely a function of speed and accuracy, but many other factors in society andhistory.</li>
+			<li>There are many text entry methods that are inefficient, and yet ubiquitious (e.g., QWERTY); adoption therefore isn't purely a function of speed and accuracy, but many other factors in society and history.</li>
 		</ul>
 
 		<p>
