--- a/2D.html
+++ b/2D.html
@@ -27,7 +27,7 @@
 
 		<h1>2D Output</h1>
 
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			It's easy to forget that computers didn't always have screens.
