--- a/3D.html
+++ b/3D.html
@@ -27,7 +27,7 @@
 
 		<h1>3D Visual Output</h1>
 
-		<div class="lead">Eric Whitmire and Andrew J. Ko</div>
+		<div class="lead">Eric Whitmire and Amy J. Ko</div>
 
 		<p>
 			In the last chapter, we discussed how interfaces communicate data, content, and animations on two-dimensional screens.
