--- a/accessibility.html
+++ b/accessibility.html
@@ -26,7 +26,7 @@
 		<small>By redspotted from London, UK (ATM keypad 2/4) [CC BY 2.0], via Wikimedia Commons</small>
 		
 		<h1>Accessibility</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			Thus far, most of our discussion has focused on what user interfaces <em>are</em>.
