--- a/architecture.html
+++ b/architecture.html
@@ -26,7 +26,7 @@
 		<small>Modern architecture in Luanda, Angola, as a metaphor for software architecture (Credit: Costa Lopes)</small>
 		
 		<h1>User interface software architecture</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			While the previous chapter discussed many of the seminal interaction paradigms we have invented for interacting with computers, we've discussed little about how all of the widgets, interaction paradigms, and other user interface ideas are actually <em>implemented</em> as software.
