--- a/body.html
+++ b/body.html
@@ -26,7 +26,7 @@
 		<small>A man and a woman playing XBox Kinect game with their bodies. Credit: Sergey Galyonkin, Flickr</small>
 
 		<h1>Bodies</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			In the <a href="hands.html">last chapter</a>, I introduced Weiser's vision of ubiquitous computing, and argued that part of fulfilling it was fully exploiting the versatility of our hands.
