--- a/declarative.html
+++ b/declarative.html
@@ -26,7 +26,7 @@
 		<small>Credit: CC0 Creative Commons</small>
 
 		<h1>Declarative interfaces</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			If you don't know the history of computing, it's easy to overlook the fact that all of the interfaces that people used to control computers before the graphical user interface were <em>programming</em> interfaces.
