--- a/hands.html
+++ b/hands.html
@@ -26,7 +26,7 @@
 		<small>Hands are versatile tools for input. Credit: Luisfi (Own work) [CC BY-SA 3.0] via Wikimedia Commons</small>
 
 		<h1>Hands</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			Thus far, we have discussed two forms of input to computers: <a href="pointing.html">pointing</a> and <a href="text-entry.html">text entry</a>.
