--- a/help.html
+++ b/help.html
@@ -26,7 +26,7 @@
 		<small>CC0 Creative Commons</small>
 
 		<h1>Help</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			In our <a href="theory.html">discussion of theory</a> at the beginning of this book, I made the case that a precondition of <em>using</em> an interface is <em>learning</em> the interface.
