--- a/history.html
+++ b/history.html
@@ -26,7 +26,7 @@
 		<small>Credit: Michael Hicks, St. Paul, MN, USA</small>
 		
 		<h1>A history of user interfaces</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			History?
