--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 	<body>
 
 		<img src="images/cover.jpg" class="img-responsive" />		
-		<small>Credit: Andrew J. Ko</small>
+		<small>Credit: Amy J. Ko</small>
 		
 		<h1>User Interface Software and Technology</h1>
-		<div class="lead"><a href="http://faculty.uw.edu/ajko">Andrew J. Ko</a> <small>with contributions from <a href="http://www.ericwhitmire.com/">Eric Whitmire</a></small></div>
+		<div class="lead"><a href="http://faculty.uw.edu/ajko">Amy J. Ko</a> <small>with contributions from <a href="http://www.ericwhitmire.com/">Eric Whitmire</a></small></div>
 
 		<table class="table">
 			<tr>
