--- a/interactive.html
+++ b/interactive.html
@@ -26,7 +26,7 @@
 		<small>The Xerox Star's graphical user interface (Credit: Xerox)</small>
 		
 		<h1>Interactive interfaces</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 		
 		<p>
 			As I've noted in past chapters, nothing about the user interface designs we use today is fundamental.
