--- a/ip.html
+++ b/ip.html
@@ -27,7 +27,7 @@
 
 		<h1>Intellectual Property</h1>
 
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			Throughout this book, we've discussed countless innovations in user interface software and technology.
