--- a/mediation.html
+++ b/mediation.html
@@ -26,7 +26,7 @@
 		<small>Credit: Marcus Hansson, Goteborg Sweden</small>
 		
 		<h1>What interfaces mediate</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			In the last two chapters, we considered two fundamental perspectives on user interface software and technology: a <em>historical</em> one, which framed user interfaces as a form of human augmentation, and a <em>theoretical</em> one, which framed interfaces as a bridge between sensory worlds and computational world of functions and state.
