--- a/physical.html
+++ b/physical.html
@@ -27,7 +27,7 @@
 
 		<h1>Physical Output</h1>
 
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			Whereas the three-dimensional output we discussed in <a href="3D.html">the previous chapter</a> can create entirely new virtual worlds, or enhanced versions of our own world, it's equally important that software be able to interface with the physical world.
