--- a/pointing.html
+++ b/pointing.html
@@ -26,7 +26,7 @@
 		<small>A wearable device with particularly small targets. Credit: fancycrave1, Pixabay</small>
 		
 		<h1>Pointing</h1>
-		<div class="lead">Andrew J. Ko (with contributions from Jacob O. Wobbrock)</div>
+		<div class="lead">Amy J. Ko (with contributions from Jacob O. Wobbrock)</div>
 
 		<p>
 			<em>
