--- a/theory.html
+++ b/theory.html
@@ -24,7 +24,7 @@
 
 		<img src="images/theory.jpg" class="img-responsive" alt="On the left, a diagram of a person and their thoughts about a shopping card; on the right, a user interface presenting a shopping cart, mediating mathematical functions that model shopping carts." />
 
-		<small>Credit: Andrew J. Ko</small>
+		<small>Credit: Amy J. Ko</small>
 		
 		<h1>A theory of user interfaces</h1>
 		<div class="lead">Andrew J. Ko</div>
