--- a/translation.html
+++ b/translation.html
@@ -26,7 +26,7 @@
 		<small>The front desk of the University of Washington's CoMotion, which supports technology transfer from research.</small>
 
 		<h1>Translating research into practice</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
     
 		<p>
 			I love doing research on interfaces.
