--- a/architecture.html
+++ b/architecture.html
@@ -241,7 +241,7 @@
 
 		<p>Benjamin B. Bederson, Jon Meyer, and Lance Good. 2000. <a href="http://dx.doi.org/10.1145/354401.354754">Jazz: an extensible zoomable user interface graphics toolkit in Java</a>. In Proceedings of the 13th annual ACM symposium on User interface software and technology (UIST '00). ACM, New York, NY, USA, 171-180.</p>
 
-		<p>Brian Burg, Richard Bailey, Andrew J. Ko, and Michael D. Ernst. 2013. <a href="http://dx.doi.org/10.1145/2501988.2502050">Interactive record/replay for web application debugging</a>. In Proceedings of the 26th annual ACM symposium on User interface software and technology (UIST '13). ACM, New York, NY, USA, 473-484.</p>
+		<p>Brian Burg, Richard Bailey, Amy J. Ko, and Michael D. Ernst. 2013. <a href="http://dx.doi.org/10.1145/2501988.2502050">Interactive record/replay for web application debugging</a>. In Proceedings of the 26th annual ACM symposium on User interface software and technology (UIST '13). ACM, New York, NY, USA, 473-484.</p>
 
 		<p>Bostock, Michael, and Jeffrey Heer. <a href="https://doi.org/10.1109/TVCG.2009.174">Protovis: A graphical toolkit for visualization.</a> IEEE transactions on visualization and computer graphics 15, no. 6 (2009).</p>
 		
@@ -271,7 +271,7 @@
 
 		<p>Scott R. Klemmer, Jack Li, James Lin, and James A. Landay. 2004. <a href="http://dx.doi.org/10.1145/985692.985743">Papier-Mache: toolkit support for tangible input</a>. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '04). ACM, New York, NY, USA, 399-406.</p>
 
-		<p>Andrew J. Ko and Brad A. Myers. 2005. <a href="http://dx.doi.org/10.1145/1095034.1095037">Citrus: a language and toolkit for simplifying the creation of structured editors for code and data</a>. In Proceedings of the 18th annual ACM symposium on User interface software and technology (UIST '05). ACM, New York, NY, USA, 3-12.</p>
+		<p>Amy J. Ko and Brad A. Myers. 2005. <a href="http://dx.doi.org/10.1145/1095034.1095037">Citrus: a language and toolkit for simplifying the creation of structured editors for code and data</a>. In Proceedings of the 18th annual ACM symposium on User interface software and technology (UIST '05). ACM, New York, NY, USA, 3-12.</p>
 
 		<p>Eric Lecolinet. 2003. <a href="https://doi.org/10.1145/964696.964711">A molecular architecture for creating advanced GUIs</a>. In Proceedings of the 16th annual ACM symposium on User interface software and technology (UIST '03). ACM, New York, NY, USA, 135-144.</p>
 
@@ -301,7 +301,7 @@
 
 		<p>Wolfgang Stuerzlinger, Olivier Chapuis, Dusty Phillips, and Nicolas Roussel. 2006. <a href="https://doi.org/10.1145/1166253.1166301">User interface facades: towards fully adaptable user interfaces</a>. In Proceedings of the 19th annual ACM symposium on User interface software and technology (UIST '06). ACM, New York, NY, USA, 309-318.</p>
 
-		<p>Amanda Swearngin, Andrew J. Ko, and James Fogarty. 2017. <a href="https://doi.org/10.1145/3025453.3025506">Genie: Input Retargeting on the Web through Command Reverse Engineering</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 4703-4714.</p>
+		<p>Amanda Swearngin, Amy J. Ko, and James Fogarty. 2017. <a href="https://doi.org/10.1145/3025453.3025506">Genie: Input Retargeting on the Web through Command Reverse Engineering</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 4703-4714.</p>
 
 		<script type="text/javascript">
 		
