--- a/declarative.html
+++ b/declarative.html
@@ -234,7 +234,7 @@
 
 		<p id="brich">Julia Brich, Marcel Walch, Michael Rietzler, Michael Weber, and Florian Schaub. 2017. <a href="https://doi.org/10.1145/3057858">Exploring End User Programming Needs in Home Automation</a>. ACM Trans. Comput.-Hum. Interact. 24, 2, Article 11 (April 2017), 35 pages.</p>
 		
-		<p id="burg">Brian Burg, Andrew J. Ko, and Michael D. Ernst. 2015. <a href="https://doi.org/10.1145/2807442.2807473">Explaining Visual Changes in Web Interfaces</a>. In Proceedings of the 28th Annual ACM Symposium on User Interface Software & Technology (UIST '15). ACM, New York, NY, USA, 259-268.</p>
+		<p id="burg">Brian Burg, Amy J. Ko, and Michael D. Ernst. 2015. <a href="https://doi.org/10.1145/2807442.2807473">Explaining Visual Changes in Web Interfaces</a>. In Proceedings of the 28th Annual ACM Symposium on User Interface Software & Technology (UIST '15). ACM, New York, NY, USA, 259-268.</p>
 
 		<p id="chang">Kerry Shih-Ping Chang and Brad A. Myers. 2014. <a href="https://doi.org/10.1145/2642918.2647371">Creating interactive web data applications with spreadsheets</a>. In Proceedings of the 27th annual ACM symposium on User interface software and technology (UIST '14). ACM, New York, NY, USA, 87-96.</p>
 
@@ -248,11 +248,11 @@
 
 		<p id="kelleher">Caitlin Kelleher and Randy Pausch. 2005. <a href="http://dx.doi.org/10.1145/1089733.1089734">Lowering the barriers to programming: A taxonomy of programming environments and languages for novice programmers</a>. ACM Comput. Surv. 37, 2 (June 2005), 83-137.</p>
 
-		<p id="ko04">Andrew J. Ko, Brad A. Myers, Htet Htet Aung (2004). <a href="https://doi.org/10.1109/VLHCC.2004.47">Six learning barriers in end-user programming systems</a>. IEEE Symposium on Visual Languages-Human Centric Computing, 199-206</p>
+		<p id="ko04">Amy J. Ko, Brad A. Myers, Htet Htet Aung (2004). <a href="https://doi.org/10.1109/VLHCC.2004.47">Six learning barriers in end-user programming systems</a>. IEEE Symposium on Visual Languages-Human Centric Computing, 199-206</p>
 		
-		<p id="ko">Andrew J. Ko, Robin Abraham, Laura Beckwith, Alan Blackwell, Margaret Burnett, Martin Erwig, Chris Scaffidi, Joseph Lawrance, Henry Lieberman, Brad Myers, Mary Beth Rosson, Gregg Rothermel, Mary Shaw, and Susan Wiedenbeck. 2011. <a href="http://dx.doi.org/10.1145/1922649.1922658">The state of the art in end-user software engineering</a>. ACM Comput. Surv. 43, 3, Article 21 (April 2011), 44 pages.</p>
+		<p id="ko">Amy J. Ko, Robin Abraham, Laura Beckwith, Alan Blackwell, Margaret Burnett, Martin Erwig, Chris Scaffidi, Joseph Lawrance, Henry Lieberman, Brad Myers, Mary Beth Rosson, Gregg Rothermel, Mary Shaw, and Susan Wiedenbeck. 2011. <a href="http://dx.doi.org/10.1145/1922649.1922658">The state of the art in end-user software engineering</a>. ACM Comput. Surv. 43, 3, Article 21 (April 2011), 44 pages.</p>
 		
-		<p id="kulesza">Todd Kulesza, Weng-Keen Wong, Simone Stumpf, Stephen Perona, Rachel White, Margaret M. Burnett, Ian Oberst, and Andrew J. Ko. 2009. <a href="http://dx.doi.org/10.1145/1502650.1502678">Fixing the program my computer learned: barriers for end users, challenges for the machine</a>. In Proceedings of the 14th international conference on Intelligent user interfaces (IUI '09). ACM, New York, NY, USA, 187-196.</p>
+		<p id="kulesza">Todd Kulesza, Weng-Keen Wong, Simone Stumpf, Stephen Perona, Rachel White, Margaret M. Burnett, Ian Oberst, and Amy J. Ko. 2009. <a href="http://dx.doi.org/10.1145/1502650.1502678">Fixing the program my computer learned: barriers for end users, challenges for the machine</a>. In Proceedings of the 14th international conference on Intelligent user interfaces (IUI '09). ACM, New York, NY, USA, 187-196.</p>
 
 		<p id="lau">Tessa Lau, Julian Cerruti, Guillermo Manzato, Mateo Bengualid, Jeffrey P. Bigham, and Jeffrey Nichols. 2010. <a href="https://doi.org/10.1145/1866029.1866067">A conversational interface to web automation</a>. In Proceedings of the 23nd annual ACM symposium on User interface software and technology (UIST '10). ACM, New York, NY, USA, 229-238.</p>
 
@@ -270,7 +270,7 @@
 
 		<p id="pane">J. F. Pane, B. A. Myers and L. B. Miller, <a href="http://doi.org/10.1109/HCC.2002.1046372">Using HCI techniques to design a more usable programming system</a>. Proceedings IEEE 2002 Symposia on Human Centric Computing Languages and Environments, 2002, pp. 198-206.</p>
 
-		<p id="patel">Kayur Patel, Naomi Bancroft, Steven M. Drucker, James Fogarty, Andrew J. Ko, and James Landay. 2010. <a href="https://doi.org/10.1145/1866029.1866038">Gestalt: integrated support for implementation and analysis in machine learning</a>. In Proceedings of the 23nd annual ACM symposium on User interface software and technology (UIST '10). ACM, New York, NY, USA, 37-46.</p>
+		<p id="patel">Kayur Patel, Naomi Bancroft, Steven M. Drucker, James Fogarty, Amy J. Ko, and James Landay. 2010. <a href="https://doi.org/10.1145/1866029.1866038">Gestalt: integrated support for implementation and analysis in machine learning</a>. In Proceedings of the 23nd annual ACM symposium on User interface software and technology (UIST '10). ACM, New York, NY, USA, 37-46.</p>
 
 		<p id="satyanarayan">Arvind Satyanarayan, Kanit Wongsuphasawat, and Jeffrey Heer. 2014. <a href="https://doi.org/10.1145/2642918.2647360">Declarative interaction design for data visualization</a>. In Proceedings of the 27th annual ACM symposium on User interface software and technology (UIST '14). ACM, New York, NY, USA, 669-678.</p>
 
