--- a/accessibility.html
+++ b/accessibility.html
@@ -210,7 +210,7 @@
 
 		<p>Martez E. Mott, Radu-Daniel Vatavu, Shaun K. Kane, and Jacob O. Wobbrock. 2016. <a href="https://doi.org/10.1145/2858036.2858390">Smart Touch: Improving Touch Accuracy for People with Motor Impairments with Template Matching</a>. In Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems (CHI '16). ACM, New York, NY, USA, 1934-1946.</p>
 
-		<p>Amanda Swearngin, Andrew J. Ko, and James Fogarty. 2017. <a href="https://doi.org/10.1145/3025453.3025506">Genie: Input Retargeting on the Web through Command Reverse Engineering</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 4703-4714.</p>
+		<p>Amanda Swearngin, Amy J. Ko, and James Fogarty. 2017. <a href="https://doi.org/10.1145/3025453.3025506">Genie: Input Retargeting on the Web through Command Reverse Engineering</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 4703-4714.</p>
 
 		<p>Jacob O. Wobbrock, Brad A. Myers, and John A. Kembel. 2003. <a href="https://doi.org/10.1145/964696.964703">EdgeWrite: a stylus-based text entry method designed for high accuracy and stability of motion</a>. In Proceedings of the 16th annual ACM symposium on User interface software and technology (UIST '03). ACM, New York, NY, USA, 61-70.</p>
 
