--- a/help.html
+++ b/help.html
@@ -312,7 +312,7 @@
 
 		<p>Pei-Yu Chi, Sally Ahn, Amanda Ren, Mira Dontcheva, Wilmot Li, and Björn Hartmann. 2012. <a href="https://doi.org/10.1145/2380116.2380130">MixT: automatic generation of step-by-step mixed media tutorials</a>. In Proceedings of the 25th annual ACM symposium on User interface software and technology (UIST '12). ACM, New York, NY, USA, 93-102.</p>
 
-		<p>Parmit K. Chilana, Andrew J. Ko, and Jacob O. Wobbrock. 2012. <a href="http://dx.doi.org/10.1145/2207676.2208620">LemonAid: selection-based crowdsourced contextual help for web applications</a>. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '12). ACM, New York, NY, USA, 1549-1558.</p>
+		<p>Parmit K. Chilana, Amy J. Ko, and Jacob O. Wobbrock. 2012. <a href="http://dx.doi.org/10.1145/2207676.2208620">LemonAid: selection-based crowdsourced contextual help for web applications</a>. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '12). ACM, New York, NY, USA, 1549-1558.</p>
 
 		<p>David K. Farkas. 1993. <a href="http://dx.doi.org/10.1145/154425.154426">The role of balloon help</a>. SIGDOC Asterisk J. Comput. Doc. 17, 2 (May 1993), 3-19.</p>
 
@@ -326,7 +326,7 @@
 
 		<p>Wei Li, Justin Matejka, Tovi Grossman, Joseph A. Konstan, and George Fitzmaurice. 2011. <a href="http://dx.doi.org/10.1145/1970378.1970380">Design and evaluation of a command recommendation system for software applications</a>. ACM Trans. Comput.-Hum. Interact. 18, 2, Article 6 (July 2011), 35 pages.</p>
 
-		<p>Brad A. Myers, David A. Weitzman, Andrew J. Ko, and Duen H. Chau. 2006. <a href="http://dx.doi.org/10.1145/1124772.1124832">Answering why and why not questions in user interfaces</a>. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '06), Rebecca Grinter, Thomas Rodden, Paul Aoki, Ed Cutrell, Robin Jeffries, and Gary Olson (Eds.). ACM, New York, NY, USA, 397-406.</p>
+		<p>Brad A. Myers, David A. Weitzman, Amy J. Ko, and Duen H. Chau. 2006. <a href="http://dx.doi.org/10.1145/1124772.1124832">Answering why and why not questions in user interfaces</a>. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '06), Rebecca Grinter, Thomas Rodden, Paul Aoki, Ed Cutrell, Robin Jeffries, and Gary Olson (Eds.). ACM, New York, NY, USA, 397-406.</p>
 
 		<p>Norman, D. A. (2013). <a href="https://books.google.com/books/about/The_Design_of_Everyday_Things.html?id=nVQPAAAAQBAJ">The design of everyday things: Revised and expanded edition. Basic books.</p>
 
