--- a/pointing.html
+++ b/pointing.html
@@ -93,7 +93,7 @@
 		
 		<p>
 			<img src="images/infinite-target.png" class="img-responsive center-block" alt="A screenshot of the OS X application menu at the top of a screen." />
-			<center><em>Apple's menu bar has infinite size, making it quick to reach. Credit: Andrew J. Ko</em></center>
+			<center><em>Apple's menu bar has infinite size, making it quick to reach. Credit: Amy J. Ko</em></center>
 		</p>
 
 		<p>
