--- a/theory.html
+++ b/theory.html
@@ -27,7 +27,7 @@
 		<small>Credit: Amy J. Ko</small>
 		
 		<h1>A theory of user interfaces</h1>
-		<div class="lead">Andrew J. Ko</div>
+		<div class="lead">Amy J. Ko</div>
 
 		<p>
 			First <a href="history.html">history</a> and now theory?
