Fixed #66, adding a bit more historical context.

--- a/history.html
+++ b/history.html
@@ -49,7 +49,9 @@
 
 		<p>
 			In the 1940's, some found this vision too limiting.
-			Most notably, <a href="https://en.wikipedia.org/wiki/Vannevar_Bush">Vannevar Bush</a>, a science administrator who headed the U.S. Office of Scientific Research and Development, wrote a 1945 article in The Atlantic Monthly, called "As We May Think."
+			The world had just invented computers, and just applied them to a very specific application of decrypting wartime messages. 
+			<a href="https://en.wikipedia.org/wiki/Vannevar_Bush">Vannevar Bush</a>, a science administrator who headed the U.S. Office of Scientific Research and Development, had a much bigger vision for computers than just fast calculators.
+			He wrote a 1945 article in The Atlantic Monthly, called "As We May Think."
 			In it, he envisioned a device called the "memex," in which people could store all of their information, including books, records, and communications, and access them with speed and flexibility (<a href="#bush">Bush 1945</a>).
 			Notably, Bush imagined the Memex as an "enlarged intimate supplement to one's memory."
 			This vision, which directly inspired hypertext and the Internet, didn't anticipate everything (there was no search or metadata), but it forcefully conveyed an alternative vision of computers as purely automated calculation machines, and instead as a form of <em>human augmentation</em>.
