Fixed #71, improved definitions and typo corrections.

--- a/theory.html
+++ b/theory.html
@@ -88,7 +88,7 @@
 		<p>
 			Don Norman, in his book, <cite>The Design of Everyday Things</cite> (<a href="#norman">Norman 2013</a>), does a nice job giving labels to some of the challenges that arise in this learning.
 			One of his first big ideas is the <strong>gulf of execution</strong>.
-			This gulf describes the knowledge gap that a person has when trying to learn what actions they can perform on an interface that will allow them to achieve their goal.
+			Gulfs of execution are gaps between the user’s goal and the input they have to provide to achieve it.
 			To illustrate, think back to the first time you used a voice user interface, such as a personal assistant on your smartphone or an automated voice interface on a phone.
 			In that moment, you experienced a gulf of execution: what did you have to say to the interface to achieve your goal?
 			What concepts did you have to learn to understand that there was a command space and a syntax for each command?
@@ -101,10 +101,10 @@
 		<p>
 			What is it that people need to learn to take action on an interface?
 			Norman (and later <a href="#gaver">Gaver 1991</a>, <a href="#hartson">Hartson 2003</a>, and <a href="norman">Norman 2013</a> again), argued that what we're really learning is <strong>affordances</strong>.
-			An <strong>affordance</strong> is a property of what can be done to an interface in order to produce some effect.
+			An <strong>affordance</strong> is a relationship between a person and a property of what can be done to an interface in order to produce some effect.
 			For example, a physical computer mouse can be clicked, which allows information to be communicated to a computer.
 			A digital personal assistant like Amazon's Alexa can be invoked by saying "Alexa".
-			These are affordances that define how an object can be interacted with.
+			However, these are just a property of a mouse and Alexa; affordances arise when a person recognizes that opportunity and knows how to act upon it.
 		</p>
 		
 		<p>
@@ -156,7 +156,7 @@
 			Want to make it easy to learn how to tell a computer add something to your cart on a website?
 			Use a button labeled "Add to cart," which most people will have already learned from using other e-commerce sites.
 			Or, leverage natural language, allowing people to say, "Alexa, order me more tissues."
-			Alternatively, interfaces might even try to anticipate what people want to do, personalizing what's available, and in doing so, miniizing how much a person has to learn.
+			Alternatively, interfaces might even try to anticipate what people want to do, personalizing what's available, and in doing so, minimizing how much a person has to learn.
 			From a design perspective, there's nothing inherently wrong with learning, it's just a cost that a designer may or may not want to impose on a new user.
 			(Perhaps learning a new interface affords new power not possible with old conventions, and so the cost is justified).
 		</p>
@@ -220,6 +220,8 @@
 			For example, rather than trying to vaguely identify the most "intuitive" experience, you can systematically ask: "Exactly how will our software behave and how will our user interface effectively teach this behavior?"
 			Or, rather than relying on stereotypes, such as "older adults will struggle to learn to use computers," you can be more precise, saying, "This particular population of adults has not learned the design conventions of iOS, and so will need to learn those before successfully utilizing this application's interface."
 			Approaching user interface design and evaluation from this perspective will help you identify major gaps in your user interface design analytically and systematically, rather than relying only on observations of someone struggling to use an interface, or worse yet, stereotypes or ill-defined concepts such as "intuitive" or "user-friendly."
+			Of course, in practice, not everyone will know these theories, and other constraints will often prevent you from doing what you know might be right.
+			That tension between theory and practice is inevitable, and something we'll return to throughout this book.
 		</p>
 		
 		<p>In the rest of this book, I'll use the theoretical ideas above to explain how different types of user interface paradigms work, and why they need to work that way.</p>
