Fixed #69, adding example of multiple mediation.

--- a/mediation.html
+++ b/mediation.html
@@ -164,6 +164,11 @@
 		</ul>
 		
 		<p>
+			Of course, one interface can mediate many of these things.
+			Twitter, for example, mediates information to resources, but it also mediates communication between people.
+			Similarly, Google, with its built in calculator support, mediates information, but also computation.
+			Therefore, complex interfaces might be doing many things at once, requiring even more careful teaching.
+		<p>
 			Because of each of these interfaces must teach different things, one must know foundations of <em>what</em> is being mediated to design effective interfaces.
 			Throughout the rest of this book, we'll review both the foundations of user interface implementation, but also how the subject of mediation constrains and influences what we implement.
 		</p>
