Fixed #68, adding more examples.

--- a/mediation.html
+++ b/mediation.html
@@ -55,7 +55,7 @@
 		<h2>Mediating automation</h2>
 
 		<p>
-			As the theory in the last chapter claimed, interfaces primarily mediate computational automation. 
+			As the theory in the last chapter claimed, interfaces primarily mediate computation. 
 			Whether it's calculating trajectories in World War II or detecting faces in a collection of photos, the vast range of algorithms from computer science that process, compute, filter, sort, search, and classify information provide real value to the world, and interfaces are how people access that value.
 		</p>
 		
@@ -95,7 +95,7 @@
 		<h2>Mediating information</h2>
 
 		<p>
-			Interfaces aren't just about automation and computation, however.
+			Interfaces aren't just about computation, however.
 			They're also about accessing information.
 			Before software, other <em>humans</em> mediated our access to information.
 			We asked friends for advice, we sought experts for wisdom, and when we couldn't find people to inform us, we consulted librarians to help us find recorded knowledge, written by experts we didn't have access to.
@@ -104,6 +104,7 @@
 		
 		<p>
 			Computing changed this.
+			Now we use software to search the web, to browse documents, to create information, and to organize it.
 			Because computers allow us to store information and access it much more quickly than we could access information through people or documents, we started to build systems for storing, curating, and provisioning information on computers and access it through user interfaces.
 			We took all of the old ideas from information science such as documents, metadata, searching, browsing, indexing, and other knowledge organization ideas, and imported those ideas into computing.
 			Most notably, the <a href="https://en.wikipedia.org/wiki/Stanford_Digital_Library_Project">Stanford Digital Library Project</a> leveraged all of these old ideas from information science and brought them to computers.
